# InterpCore

./: Cargo.toml  README.md
docs/: FPGA_BRINGUP.md  RTL_README.md
fpga/agilex/: top_agilex.sv
fpga/constraints/: top.xdc
fpga/versax/: top_versax.sv
hw/regs/: dma_regs.hjson  fsm_regs.hjson  gmf_regs.hjson  gse_regs.hjson  mc_regs.hjson  pta_regs.hjson
hw/rtl/clkreset/: clkgen.sv  reset_sync.sv
hw/rtl/common/: axi4l_dec_2to1.sv  axi4l_pkg.sv  axi4s_pkg.sv  noc_pkg.sv  util_pkg.sv
hw/rtl/fsm/: fsm_canonical_label.sv  fsm_pattern_counter.sv  fsm_pipeline.sv
hw/rtl/gmf/: gmf_bank.sv  gmf_banks_cluster.sv  gmf_pim_alu.sv
hw/rtl/gse/: gse_activation_decoder.sv  gse_ingress_dma.sv  gse_island_builder.sv  gse_window_buffer.sv
hw/rtl/host/: dma_engine.sv  pcie_cxl_endpoint.sv
hw/rtl/mc/: mc_axi_regs.sv  mc_riscv_subsys.sv
hw/rtl/noc/: noc_bridge_axi4l.sv  noc_bridge_axi4s.sv  noc_router.sv
hw/rtl/pta/: pta_maskgen.sv  pta_pe.sv  pta_scheduler.sv
hw/rtl/top/: nsi_cp_top.sv
sim/: README.md
sim/gmf/: tb_gmf_kv.sv
sim/gse/: tb_activation_decoder.sv
sim/noc/: tb_noc_multi_vc.sv  tb_noc_router.sv
sim/pipeline/: tb_gse_gmf_smoke.sv
sim/top/: tb_nsi_cp_top_smoke.sv
sim_build/: rtl.f
src/: main.rs
src/core/: config.rs  hif.rs  mod.rs  types.rs
src/engines/: fsm.rs  gse.rs  mod.rs  pta.rs
