[package]
name = "interpchip"
version = "0.1.0"
edition = "2021"

[features]
openai = []
anthropic = []
default = []

[dependencies]
tokio = { version = "1.32", features = ["full"] }
rayon = "1.8"
dashmap = "5.5"
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
num_cpus = "1.16"
rand = "0.8"
rand_chacha = "0.3"
